# advent-of-code

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  day_1.py  day_2.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: tests.yaml
challenges/: cli.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  download_data.py
challenges/year_2021/: day_1.py  day_11.py  day_2.py  day_4.py  day_5.py  day_7.py  day_8.py  day_9.py
challenges/year_2022/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py
solutions/year_2021/: day_11.py  day_16.py  day_18.py  day_20.py  day_21.py  day_24.py  day_3.py  day_4.py  day_5.py  day_8.py  day_9.py
solutions/year_2021/tests/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_2.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
solutions/year_2022/: day_10.py  day_11.py  day_13.py  day_14.py  day_18.py  day_2.py  day_24.py  day_25.py  day_3.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
solutions/year_2022/tests/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_2.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
solutions/year_2023/: day_1.py  day_2.py  day_3.py  day_5.py  day_6.py  day_7.py
solutions/year_2023/tests/: test_day_1.py  test_day_10.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py
solutions/year_2024/: day_1.py  day_10.py  day_11.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  pyproject.toml
solutions/year_2024/tests/: conftest.py  test_day_1.py  test_day_10.py  test_day_11.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
src/aoc/: cli.py
src/aoc/year_2021/: day_1.py  day_10.py  day_12.py  day_13.py  day_14.py  day_15.py  day_17.py  day_2.py  day_22.py  day_23.py  day_25.py  day_3.py  day_4.py  day_6.py  day_7.py
src/aoc/year_2022/: day_1.py  day_12.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_3.py  day_4.py  day_7.py  day_8.py
src/aoc/year_2023/: day_1.py  day_10.py  day_4.py  day_8.py
src/solutions/year_2024/: day_3.py
src/solutions/year_2024/tests/: test_day_3.py
templates/: challenge_template.py.template  test_template.py.template
tests/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py
tests/year_2021/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_13.py  test_day_14.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_2.py  test_day_20.py  test_day_21.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
tests/year_2022/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_14.py  test_day_16.py  test_day_17.py  test_day_19.py  test_day_2.py  test_day_21.py  test_day_24.py  test_day_25.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
tests/year_2023/: test_day_1.py  test_day_10.py  test_day_4.py  test_day_5.py  test_day_7.py
