[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.1"
description = "Results and work for the 'Advent of code 2022'."
authors = ["Gijs Wobben <gijswobben@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gijswobben/advent-of-code-2022"
packages = [{include = "aoc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
browser-cookie3 = "^0.16.2"
requests = "^2.28.1"
click = "^8.1.3"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
types-requests = "^2.28.11.5"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["challenges", "tests"]

[tool.black]
max-line-length = 88
extend-ignore = "E203"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88

[tool.poetry.scripts]
aoc = 'aoc.cli:cli'
