[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.1"
description = "Results and work for the 'Advent of code 2022'."
authors = ["Gijs Wobben <gijswobben@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gijswobben/advent-of-code-2022"
packages = [{ include = "aoc", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
browser-cookie3 = "^0.16.2"
requests = "^2.28.1"
click = "^8.1.3"
pandas = "^1.5.2"
networkx = "^2.8.8"
pyfiglet = "^0.8.post1"
scipy = "^1.9.3"
z3-solver = "^4.11.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
types-requests = "^2.28.11.5"
jinja2 = "^3.1.2"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["challenges", "tests"]

[tool.black]
max-line-length = 88
extend-ignore = "E203"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88

[tool.poetry.scripts]
aoc = 'aoc.cli:cli'


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "C", "N", "D", "COM", "ASYNC", "I"]
ignore = [
    "D211", # 'no-blank-line-before-class'
    "D213", # 'multi-line-summary-second-line'
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["C", "D", "COM", "I"]
unfixable = []

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=."
